--- a/.github/workflows/test-workflow-variables.yaml
+++ b/.github/workflows/test-workflow-variables.yaml
@@ -9,4 +9,4 @@ jobs:
         run: |
           printenv
       - name: Access event name 
-        run: ${{ github.GITHUB_EVENT_NAME }}
+        run: ${{ github.event.name }}
