--- a/.github/workflows/test-workflow-variables.yaml
+++ b/.github/workflows/test-workflow-variables.yaml
@@ -13,3 +13,6 @@ jobs:
           printenv
       - name: Access event name 
         run: echo "${{ github.event_name }}"
+      - name: env at workflow
+        run: echo $APP_VERSION
+      - run: echo $APP_VERSION
