--- a/.github/workflows/test-workflow-variables.yaml
+++ b/.github/workflows/test-workflow-variables.yaml
@@ -14,5 +14,5 @@ jobs:
       - name: Access event name 
         run: echo "${{ github.event_name }}"
       - name: env at workflow
-        run: echo $APP_VERSION
+        run: echo $APP_NAME
       - run: echo $APP_VERSION
