--- a/.github/workflows/test-workflow-variables.yaml
+++ b/.github/workflows/test-workflow-variables.yaml
@@ -13,6 +13,9 @@ jobs:
           printenv
       - name: Access event name 
         run: echo "${{ github.event_name }}"
-      - name: env at workflow
+  Explore-GitHub-Actions-Custom-ENV:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Env at workflow
         run: echo $APP_NAME
       - run: echo $APP_VERSION
