--- a/.github/workflows/test-workflow-variables.yaml
+++ b/.github/workflows/test-workflow-variables.yaml
@@ -4,6 +4,7 @@ on: [push]
 env:
   APP_NAME: "GitHub Actions"
   APP_VERSION: "1.0.0"
+  APP_KEY: "jywq5678393kuy777ww8w962784dhdhdhjwt"
 jobs:
   Explore-GitHub-Actions-ENV:
     runs-on: ubuntu-latest
@@ -11,7 +12,7 @@ jobs:
       - name: Print all default env variables
         run: |
           printenv
-      - name: Access event name 
+      - name: Access event name
         run: echo "${{ github.event_name }}"
   Explore-GitHub-Actions-Custom-ENV:
     runs-on: ubuntu-latest
@@ -19,3 +20,12 @@ jobs:
       - name: Env at workflow
         run: echo $APP_NAME
       - run: echo $APP_VERSION
+  Explore-GitHub-Actions-Python-ENV:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+      - name: Get python version
+        run: python --version
+      - name: Run script
+        run: python test.py
