--- a/.github/workflows/test-workflow-variables.yaml
+++ b/.github/workflows/test-workflow-variables.yaml
@@ -4,7 +4,7 @@ on: [push]
 env:
   APP_NAME: "GitHub Actions"
   APP_VERSION: "1.0.0"
-  APP_KEY: "jywq5678393kuy777ww8w962784dhdhdhjwt"
+  API_KEY: "jywq5678393kuy777ww8w962784dhdhdhjwt"
 jobs:
   Explore-GitHub-Actions-ENV:
     runs-on: ubuntu-latest
