env at repo level

--- a/.github/workflows/test-workflow-variables.yaml
+++ b/.github/workflows/test-workflow-variables.yaml
@@ -20,6 +20,8 @@ jobs:
       - name: Env at workflow
         run: echo $APP_NAME
       - run: echo $APP_VERSION
+      - name: Env at repo level 
+        run: echo $API_KEY_REPO
   Explore-GitHub-Actions-Python-ENV:
     runs-on: self-hosted
     steps:
