--- a/.github/workflows/test-workflow-variables.yaml
+++ b/.github/workflows/test-workflow-variables.yaml
@@ -5,6 +5,7 @@ env:
   APP_NAME: "GitHub Actions"
   APP_VERSION: "1.0.0"
   API_KEY: "jywq5678393kuy777ww8w962784dhdhdhjwt"
+  API_KEY_REPO: ${{ vars.API_KEY_REPO}}
 jobs:
   Explore-GitHub-Actions-ENV:
     runs-on: self-hosted
